# pkGroup-cadSystem

./: pyproject.toml
pkgroup_cadsystem/: workBitrix.py  workFlask.py  workSheet.py
pkgroup_cadsystem/static/: spaceGreen.css
pkgroup_cadsystem/templates/: index.html
